fix: 修改dialog overflow css问题 (#1611)

--- a/packages/zent/assets/dialog.scss
+++ b/packages/zent/assets/dialog.scss
@@ -124,7 +124,7 @@ $footer-height: 72px;
 
   &-content {
     padding: 0 16px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
